@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: /usr/lib/rpm/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.111 2002/07/24 16:21:23 jbj Exp $
+# $Id: macros.in,v 1.112 2002/07/28 14:52:33 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -552,8 +552,9 @@
 #	Note: the %_vsflags_erase applies to --upgrade/--freshen modes as
 #	well as --erase.
 #
-%_vsflags_install	8
+%_vsflags_build		8
 %_vsflags_erase		8
+%_vsflags_install	8
 %_vsflags_query		8
 %_vsflags_rebuilddb	0
 %_vsflags_verify	0
