@@ -189,6 +189,7 @@
 	- fix: rpm2cpio disables signature checks (i.e. same behavior).
 	- popt: display sub-table options only once on --usage.
 	- wire --nosignatures et al as common options, rework CLI options.
+	- python: don't segfault in ts.GetKeys() on erased packages.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
